# PDF_Read_analyzer

./: .gitignore  README.md  env.example  package-lock.json  package.json  pdf_reader_core.py  pdf_structure.py  pdf_uploader.py  pyproject.toml  run.bat  tsconfig.json
.github/workflows/: tests.yml
docs/: process_flow.md  startup_log.md
public/: index.html
src/: server.ts
tests/: test_pdf_reader_core.py  test_pdf_structure.py  test_pdf_structure_core.py  test_pdf_uploader.py
