[project]
name = "pdf-reader"
version = "0.1.0"
description = "PDF Reader with Streamlit and LangChain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "langchain>=0.0.350",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.20",
    "PyPDF2>=3.0.1",
    "qdrant-client>=1.6.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
]
