[project]
name = "pdf-reader"
version = "0.1.0"
description = "PDF Reader with Streamlit and LangChain"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "langchain>=0.0.350",
    "langchain-openai>=0.0.2",
    "langchain-community>=0.0.20",
    "langchain-ollama>=0.2.0",
    "langchain-qdrant>=0.2.0",
    "pdfplumber>=0.11.0",
    "qdrant-client>=1.6.0",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "pytest>=8.0.0",
]
